--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="headerhauteur"></div>  <div class="containerbox">
         <div class="box boitecentre" style="order: 2">
           <div class="titre">Premier titre</div>
-          <img src="/images/camera.jpg" alt="camera"/>
+          <img src="images/camera.jpg" alt="camera"/>
 
 
           <p>
@@ -46,7 +46,7 @@
 
         <div class="box" style="order: 1"> <div class="boitecolor">
           <div class="titre">Deuxième titre</div>
-          <img src="/images/computer.jpg" alt="ordinateur" />
+          <img src="images/computer.jpg" alt="ordinateur" />
           <p> 
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
             dolorem sint magnam expedita. Libero, impedit magnam deleniti in
@@ -69,7 +69,7 @@
         </div></div>
         <div class="box" style="order: 3">
             <div class="boitecolor"> <div class="titre">Troisième titre</div>
-          <img src="/images/sofa.png" alt="sofa" />
+          <img src="images/sofa.png" alt="sofa" />
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt
             cupiditate illum unde pariatur officia praesentium sit alias et
